# rhino-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/dev/: manual-verification.md  rpc-error-codes.md  runscript-migration.md  work-queue-spike.md
docs/en/: capabilities.md  configuration.md  grasshopper-guide.md  installation.md  tools-reference.md  troubleshooting.md
docs/ko/: capabilities.md  configuration.md  grasshopper-guide.md  installation.md  tools-reference.md  troubleshooting.md
examples/: architectural_massing.py  basic_modeling.py  batch_call_benchmark.py  batch_geometry.py  drawing_set.py  error_handling.py  freeform_canopy.py  grasshopper_workflow.py  iterative_design_exploration.py  parametric_facade.py  schedule_report.py  sun_study.py  validation_workflow.py
rhino_plugin/: RhinoMCPBridge.py  install.py
rhino_plugin/csharp/: BridgeChunkStore.cs  BridgeContext.cs  BridgeServer.cs  CommandDispatcher.cs  Plugin.cs  RhinoMCPPlugin.csproj  RpcErrorCodes.cs  manifest.yml
rhino_plugin/csharp/Bridge/: AnnouncementWriter.cs  HeartbeatSender.cs  ProgressSink.cs
rhino_plugin/csharp/Commands/: McpInstallCommand.cs
rhino_plugin/csharp/Handlers/: AnalysisHandler.cs  AnnotationHandler.cs  BatchHandler.cs  BimIoHandler.cs  BlockHandler.cs  BridgeBatchHandler.cs  BridgeChunkHandler.cs  CompositionHandler.cs  ControlPointHandler.cs  CurveHandler.cs  DeformationHandler.cs  DisplayHandler.cs  DocumentConfigHandler.cs  DrawingHandler.cs  EnvironmentHandler.cs  ExtractionHandler.cs  FreeformHandler.cs  GeometryHandler.cs  GhTemplatesHandler.cs  GrasshopperHandler.cs  HandlerBase.cs  HistoryHandler.cs  IOHandler.cs  LayerHandler.cs  MeshHandler.cs  NurbsHandler.cs  PanelingHandler.cs  QueryHandler.cs  RenderHandler.cs  RenderQueueHandler.cs  ScheduleHandler.cs  ScriptHandler.cs  SolidHandler.cs  SubDHandler.cs  SurfaceHandler.cs  SurfaceMatchHandler.cs  TransformHandler.cs  ValidationHandler.cs
rhino_plugin/csharp/Setup/: UvAutoInstaller.cs
scripts/: build-plugin.sh  build.sh  check-bridge.sh  ci.sh  install.sh  publish-yak.sh  run.sh  test.sh
src/rhino_mcp/: __init__.py  document.py  install.py  server.py  transport.py
src/rhino_mcp/bridge/: __init__.py  discovery.py  named_pipe.py  rhino_connection.py  tcp_socket.py  transport_base.py  unix_socket.py
src/rhino_mcp/data/: material_presets.json  rhinoscriptsyntax.json
src/rhino_mcp/models/: __init__.py  geometry_types.py  grasshopper_types.py
src/rhino_mcp/prompts/: __init__.py  strategy.py
src/rhino_mcp/tools/: __init__.py  _helpers.py  _safety.py  (+36 more)
tests/: conftest.py  test_install.py  test_main_cli.py  test_prompts.py  test_server_smoke.py  test_utils.py
tests/bridge/: test_bridge_edge_cases.py  test_progress_drain.py  test_protocol.py  test_rhino_connection.py  test_serialization.py
tests/tools/: test_analysis.py  test_annotation_extensions.py  test_annotation_io.py  test_batch_call.py  test_bim_io.py  test_blocks.py  test_bridge_admin.py  test_composition.py  test_curves.py  test_daylight.py  test_display_surfaces.py  test_document_config.py  test_drawing.py  test_environment.py  test_freeform.py  test_geometry.py  test_geometry_validation.py  test_gh_templates.py  test_grasshopper.py  test_io.py  test_layers_materials.py  test_material_presets.py  test_more_layers.py  test_more_transforms.py  test_python_safety.py  test_query.py  test_render.py  test_runtime_promotion.py  test_schedule.py  test_scripting_csharp_gate.py  test_select_filters.py  test_solids.py  test_transform.py
(+19 files in other folders)
